syntax="proto3";

package proto;

option go_package="/proto";

/* Request & Response */
message AddRequest{
    int32 x = 1;
    int32 y = 2;
}

message AddResponse{
    int32 sum = 1;
}

/* Server Streaming */
message PrimeRequest{
    int32 start = 1;
    int32 end = 2;
}

message PrimeResponse{
    int32 prime = 1;
}

/* Service */
service AppService{

    /* request & response */
    rpc Add(AddRequest) returns (AddResponse);

    /* server streaming */
    rpc GeneratePrimes(PrimeRequest) returns (stream PrimeResponse);


}




